# guitar-tab-gen

./: .gitignore  README.md  diary.txt  pyproject.toml  requirements_cp.txt  requirements_dadagp.txt
models/CP_Drums_Generation-main/: requirements.txt
models/dadaGP-model-checkpoints/: README.txt  dadaGP-generation-conda-env-requirements.txt  environment.yml  full-data-config_5_lat1024.yml  indexes_to_remove.pkl  inference_fd5_lat1024.py  model_ead.py  runtime_stats.json  train_randomsampling_5_lat1024.py  vocab.ipynb  vocab_and_tests.ipynb
outputs/: exit_music.gp5  p5_bass_only_3.gp5  prompt5_2.gp5  prompt6.gp5
outputs/gp5/: p5_bass_only.gp5
reports-presentations/aimc_paper/: aimc2025.sty  aimc_paper.aux  aimc_paper.out  aimc_paper.tex  bgtg_lib.bib  template_aimc2025.tex
reports-presentations/final_presentation/: notes.md
reports-presentations/final_report/: bgtg_lib.bib  final_report.aux  final_report.bbl  final_report.bcf  final_report.blg  final_report.run.xml  final_report.tex
reports-presentations/images-figures/: example_prompt.txt
reports-presentations/mid_term_report/: bgtg_lib.bib  first_report_ob.aux  first_report_ob.bbl  first_report_ob.bcf  first_report_ob.blg  first_report_ob.run.xml  first_report_ob.tex  first_report_ob.toc  mid_term_report.aux  mid_term_report.bbl  mid_term_report.bcf  mid_term_report.blg  mid_term_report.run.xml  mid_term_report.tex  paper_ob.tex  titlepage.tex
reports-presentations/presentation/: notes.md
src/: aux_fun.py  dadagp_sep_file_gen.ipynb  testing.ipynb
src/1. preprocessing/: 1.rg_csv_cleaning_and_mapping.ipynb  2.mapping_dadagp_inst.ipynb  3.assigning_is_rythmic.ipynb  5.cp_drums_pre_processing.ipynb  6.cp_drums_post_processing.ipynb  aux_fun.py  generating_training_file.ipynb  (+1 more)
(+217 files in other folders)
