[tool.poetry]
name = "guitar-tab-gen"
version = "0.1.0"
description = "Conditional generation of bass guitar tablatures for guitar accompaniment in Western popular music."
authors = ["Olit <93828847+OlitHub@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.10"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "==2.*"
numpy = "^2.2.2"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
pyguitarpro = "^0.9.3"
music21 = "==6.*"
pretty-midi = "^0.2.10"
pypianoroll = "^1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
