[tool.poetry]
name = "guitar-tab-gen"
version = "0.1.0"
description = "Conditional generation of bass guitar tablatures for guitar accompaniment in Western popular music."
authors = ["Olit <93828847+OlitHub@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.8.dev0"
tensorflow-io-gcs-filesystem = "0.34.0"
tensorflow = "2.11.0"
numpy = "1.21.6"
grpcio = "1.62.3"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
